[gd_scene load_steps=6 format=3 uid="uid://b1b7io78sbl6b"]

[ext_resource type="Script" uid="uid://d5tygqs125y5" path="res://addons/src/scripts/DialogueTransitionEntry.gd" id="1_bc4id"]

[sub_resource type="Gradient" id="Gradient_jsg8m"]
offsets = PackedFloat32Array(0.558442)
colors = PackedColorArray(0.099986, 0.099986, 0.099986, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b46qh"]
gradient = SubResource("Gradient_jsg8m")
width = 1117
height = 271
fill_from = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_fyu02"]
offsets = PackedFloat32Array(0.519481)
colors = PackedColorArray(0.255659, 0.255659, 0.255659, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_isuox"]
gradient = SubResource("Gradient_fyu02")

[node name="DialogueTransitionEntry" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -1.0
offset_right = -18.0
offset_bottom = -249.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_b46qh")
stretch_mode = 2
script = ExtResource("1_bc4id")

[node name="Background2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 13.0
offset_top = 14.0
offset_right = 1098.0
offset_bottom = 260.0
texture = SubResource("GradientTexture1D_isuox")

[node name="DeleteButton" type="Button" parent="."]
layout_mode = 2
offset_left = 965.0
offset_top = 29.0
offset_right = 1079.0
offset_bottom = 76.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "DELETE"

[node name="GeneralData" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 47.0
offset_top = 19.0
offset_right = 713.0
offset_bottom = 251.0

[node name="Background" type="HBoxContainer" parent="GeneralData"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 17.4

[node name="TextTag" type="Label" parent="GeneralData/Background"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
theme_override_font_sizes/font_size = 24
text = "Background"

[node name="BGInput" type="LineEdit" parent="GeneralData/Background"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.57

[node name="BGVisibleToggle" type="CheckButton" parent="GeneralData/Background"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.35
theme_override_font_sizes/font_size = 24
text = "Visible?"

[node name="TransitionSection" type="HBoxContainer" parent="GeneralData"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0

[node name="TransitionType" type="Label" parent="GeneralData/TransitionSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.51
theme_override_font_sizes/font_size = 24
text = "Transition"
vertical_alignment = 1

[node name="TransitionDropdown" type="OptionButton" parent="GeneralData/TransitionSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.69
item_count = 6
popup/item_0/text = "STATIC"
popup/item_0/id = 0
popup/item_1/text = "FADE_TO_BLACK"
popup/item_1/id = 1
popup/item_2/text = "FADE_FROM_BLACK"
popup/item_2/id = 2
popup/item_3/text = "CLEAR_TEXT"
popup/item_3/id = 3
popup/item_4/text = "FADE_TO_CLEAR"
popup/item_4/id = 4
popup/item_5/text = "FADE_FROM_CLEAR"
popup/item_5/id = 5

[node name="Offset" type="Label" parent="GeneralData/TransitionSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.52

[node name="DurationSection" type="HBoxContainer" parent="GeneralData"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.08

[node name="DurationTag" type="Label" parent="GeneralData/DurationSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.77
theme_override_font_sizes/font_size = 24
text = "Duration"
vertical_alignment = 1

[node name="DurationInput" type="LineEdit" parent="GeneralData/DurationSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.75
alignment = 1

[node name="Offset" type="Label" parent="GeneralData/DurationSection"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 6.1

[node name="BoxControl" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 991.0
offset_top = 83.0
offset_right = 1051.0
offset_bottom = 263.0
scale = Vector2(1, 0.88)

[node name="MoveUpButton" type="Button" parent="BoxControl"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 64
text = "^"

[node name="MoveDownButton" type="Button" parent="BoxControl"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 48
text = "V"

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[connection signal="button_up" from="DeleteButton" to="." method="OnDelete"]
[connection signal="button_up" from="BoxControl/MoveUpButton" to="." method="OnMoveUp"]
[connection signal="button_up" from="BoxControl/MoveDownButton" to="." method="OnMoveDown"]
